@@ -7,6 +7,8 @@ unreleased
 Bug Fixes
 ~~~~~~~~~
 
+- Use '\r\n' line endings in ``Response.__str__``.
+
 - Fix a bug in ``SignedSerializer`` preventing secrets from containing
   higher-order characters. See https://github.com/Pylons/webob/issues/136
 
